--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -9,6 +9,7 @@
   },
   "private": true,
   "dependencies": {
+    "adm-zip": "^0.5.16",
     "axios": "^1.7.7",
     "selenium-webdriver": "^4.25.0"
   }
