--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "adm-zip": "^0.5.16",
     "axios": "^1.7.7",
+    "nanoid": "^3.3.7",
     "selenium-webdriver": "^4.25.0"
   }
 }
