feat(workspace): 优化任务执行流程和 IP 获取策略
- 新增浏览器设置功能，支持选择默认浏览器或自编译浏览器
- 实现了清除当前任务的功能
- 优化了 IP 获取流程，支持根据网络类型筛选 IP
-调整了任务执行逻辑，提高了任务成功率
- 更新了用户界面，增加了浏览器设置和清除任务按钮

--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wx",
-  "version": "1.0.7",
+  "version": "1.0.10",
   "description": "A fast, desktop software development framework",
   "main": "main.js",
   "scripts": {
@@ -39,7 +39,7 @@
   "keywords": [
     "Electron"
   ],
-  "author": "Jungle, Inc <530353222@qq.com>",
+  "author": "Jungle, Inc",
   "license": "Apache",
   "devDependencies": {
     "@electron/rebuild": "^3.6.2",
