--- a/client/frontend/package.json
+++ b/client/frontend/package.json
@@ -21,6 +21,7 @@
     "nanoid": "^5.0.7",
     "pinia": "^2.2.4",
     "ramda": "^0.30.1",
+    "virtua": "^0.36.3",
     "vite-plugin-top-level-await": "^1.4.4",
     "vue": "^3.5.10",
     "vue-router": "^4.4.5"
